tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_plot__list_plot_explicit_xy.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListPlot[{{1, 2}, {3, 5}, {7, 1}}]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<circle cx="351" cy="1488" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<circle cx="1360" cy="171" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<circle cx="3377" cy="1927" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<line x1="230.2" y1="1997.8" x2="3500.0" y2="1997.8" stroke="#666" stroke-width="5"/>
<line x1="250.4" y1="1997.8" x2="250.4" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="452.3" y1="1997.8" x2="452.3" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="654.1" y1="1997.8" x2="654.1" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="1057.8" y1="1997.8" x2="1057.8" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="1259.6" y1="1997.8" x2="1259.6" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="1461.5" y1="1997.8" x2="1461.5" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="1663.3" y1="1997.8" x2="1663.3" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="2067.0" y1="1997.8" x2="2067.0" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="2268.8" y1="1997.8" x2="2268.8" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="2470.6" y1="1997.8" x2="2470.6" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="2672.5" y1="1997.8" x2="2672.5" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="3076.1" y1="1997.8" x2="3076.1" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="3278.0" y1="1997.8" x2="3278.0" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="3479.8" y1="1997.8" x2="3479.8" y2="1973.8" stroke="#666" stroke-width="5"/>
<line x1="855.9" y1="1997.8" x2="855.9" y2="1957.8" stroke="#666" stroke-width="5"/>
<text x="855.9" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="1865.1" y1="1997.8" x2="1865.1" y2="1957.8" stroke="#666" stroke-width="5"/>
<text x="1865.1" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="2874.3" y1="1997.8" x2="2874.3" y2="1957.8" stroke="#666" stroke-width="5"/>
<text x="2874.3" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">6</text>
<line x1="230.2" y1="100.0" x2="230.2" y2="1997.8" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="1839.6" x2="254.2" y2="1839.6" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="1751.7" x2="254.2" y2="1751.7" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="1663.9" x2="254.2" y2="1663.9" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="1576.0" x2="254.2" y2="1576.0" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="1400.3" x2="254.2" y2="1400.3" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="1312.5" x2="254.2" y2="1312.5" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="1224.6" x2="254.2" y2="1224.6" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="1136.7" x2="254.2" y2="1136.7" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="961.0" x2="254.2" y2="961.0" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="873.2" x2="254.2" y2="873.2" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="785.3" x2="254.2" y2="785.3" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="697.4" x2="254.2" y2="697.4" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="521.7" x2="254.2" y2="521.7" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="433.9" x2="254.2" y2="433.9" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="346.0" x2="254.2" y2="346.0" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="258.1" x2="254.2" y2="258.1" stroke="#666" stroke-width="5"/>
<line x1="230.2" y1="1927.5" x2="270.2" y2="1927.5" stroke="#666" stroke-width="5"/>
<text x="183.0" y="1964.2" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="230.2" y1="1488.2" x2="270.2" y2="1488.2" stroke="#666" stroke-width="5"/>
<text x="183.0" y="1524.9" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="230.2" y1="1048.9" x2="270.2" y2="1048.9" stroke="#666" stroke-width="5"/>
<text x="183.0" y="1085.6" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3</text>
<line x1="230.2" y1="609.6" x2="270.2" y2="609.6" stroke="#666" stroke-width="5"/>
<text x="183.0" y="646.3" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="230.2" y1="170.3" x2="270.2" y2="170.3" stroke="#666" stroke-width="5"/>
<text x="183.0" y="207.0" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">5</text>
</svg>
