tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__plot3d__list_plot__list_plot_filling_between_series_styled.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"ListPlot[{{1, 2, 3, 4}, {2, 3, 4, 5}}, Filling -> {1 -> {{2}, Directive[Orange]}}]\")"
---
<svg width="360" height="225" viewBox="0 0 3600 2250" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<rect x="0" y="0" width="3600" height="2250" opacity="1" fill="#FFFFFF" stroke="none"/>
<polyline fill="none" opacity="0.2" stroke="#FF8000" stroke-width="10" points="351,1927 351,1488 "/>
<polyline fill="none" opacity="0.2" stroke="#FF8000" stroke-width="10" points="1360,1488 1360,1049 "/>
<polyline fill="none" opacity="0.2" stroke="#FF8000" stroke-width="10" points="2368,1049 2368,610 "/>
<polyline fill="none" opacity="0.2" stroke="#FF8000" stroke-width="10" points="3377,610 3377,171 "/>
<circle cx="351" cy="1927" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<circle cx="1360" cy="1488" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<circle cx="2368" cy="1049" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<circle cx="3377" cy="610" r="30" opacity="1" fill="#5E81B5" stroke="none" stroke-width="1"/>
<circle cx="351" cy="1488" r="30" opacity="1" fill="#E0932C" stroke="none" stroke-width="1"/>
<circle cx="1360" cy="1049" r="30" opacity="1" fill="#E0932C" stroke="none" stroke-width="1"/>
<circle cx="2368" cy="610" r="30" opacity="1" fill="#E0932C" stroke="none" stroke-width="1"/>
<circle cx="3377" cy="171" r="30" opacity="1" fill="#E0932C" stroke="none" stroke-width="1"/>
<line x1="230.2" y1="1997.8" x2="3500.0" y2="1997.8" stroke="#666" stroke-width="10"/>
<line x1="553.2" y1="1997.8" x2="553.2" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="755.0" y1="1997.8" x2="755.0" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="956.9" y1="1997.8" x2="956.9" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="1158.7" y1="1997.8" x2="1158.7" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="1562.4" y1="1997.8" x2="1562.4" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="1764.2" y1="1997.8" x2="1764.2" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="1966.0" y1="1997.8" x2="1966.0" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2167.9" y1="1997.8" x2="2167.9" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2571.6" y1="1997.8" x2="2571.6" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2773.4" y1="1997.8" x2="2773.4" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="2975.2" y1="1997.8" x2="2975.2" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="3177.1" y1="1997.8" x2="3177.1" y2="1973.8" stroke="#666" stroke-width="10"/>
<line x1="351.4" y1="1997.8" x2="351.4" y2="1957.8" stroke="#666" stroke-width="10"/>
<text x="351.4" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="1360.5" y1="1997.8" x2="1360.5" y2="1957.8" stroke="#666" stroke-width="10"/>
<text x="1360.5" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="2369.7" y1="1997.8" x2="2369.7" y2="1957.8" stroke="#666" stroke-width="10"/>
<text x="2369.7" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3</text>
<line x1="3378.9" y1="1997.8" x2="3378.9" y2="1957.8" stroke="#666" stroke-width="10"/>
<text x="3378.9" y="2118.5" text-anchor="middle" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="230.2" y1="100.0" x2="230.2" y2="1997.8" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1839.6" x2="254.2" y2="1839.6" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1751.7" x2="254.2" y2="1751.7" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1663.9" x2="254.2" y2="1663.9" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1576.0" x2="254.2" y2="1576.0" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1400.3" x2="254.2" y2="1400.3" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1312.5" x2="254.2" y2="1312.5" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1224.6" x2="254.2" y2="1224.6" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1136.7" x2="254.2" y2="1136.7" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="961.0" x2="254.2" y2="961.0" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="873.2" x2="254.2" y2="873.2" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="785.3" x2="254.2" y2="785.3" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="697.4" x2="254.2" y2="697.4" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="521.7" x2="254.2" y2="521.7" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="433.9" x2="254.2" y2="433.9" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="346.0" x2="254.2" y2="346.0" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="258.1" x2="254.2" y2="258.1" stroke="#666" stroke-width="10"/>
<line x1="230.2" y1="1927.5" x2="270.2" y2="1927.5" stroke="#666" stroke-width="10"/>
<text x="183.0" y="1964.2" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">1</text>
<line x1="230.2" y1="1488.2" x2="270.2" y2="1488.2" stroke="#666" stroke-width="10"/>
<text x="183.0" y="1524.9" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">2</text>
<line x1="230.2" y1="1048.9" x2="270.2" y2="1048.9" stroke="#666" stroke-width="10"/>
<text x="183.0" y="1085.6" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">3</text>
<line x1="230.2" y1="609.6" x2="270.2" y2="609.6" stroke="#666" stroke-width="10"/>
<text x="183.0" y="646.3" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">4</text>
<line x1="230.2" y1="170.3" x2="270.2" y2="170.3" stroke="#666" stroke-width="10"/>
<text x="183.0" y="207.0" text-anchor="end" font-family="Atkinson Hyperlegible Next, sans-serif" font-size="105" fill="#666">5</text>
</svg>
